# dedo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
dedo/: __init__.py  demo.py  demo_preset.py  run_rl_sb3.py  run_rllib.py  run_svae.py
dedo/envs/: __init__.py  deform_env.py  deform_env_mujoco.py  deform_robot_env.py  deform_robot_env_mujoco.py
dedo/utils/: args.py  bullet_manipulator.py  camera_utils.py  init_utils.py  pcd_utils.py  preset_info.py  procedural_utils.py  process_camera.py  rl_sb3_utils.py  rllib_utils.py  task_info.py  train_utils.py
dedo/vaes/: nets.py  prob.py  svae.py  svae_utils.py  svae_viz.py
scripts/: fix_meshes_blender.py  update_task_info.py
