[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dedo"
version = "0.1.0"
description = "Dynamic Environments with Deformable Objects."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "gymnasium>=1.0",
    "pybullet>=3.2.5",
    "scipy",
    "torch",
    "stable_baselines3>=2.3",
    "matplotlib",
    "tensorboard",
    "tensorboardX",
    "moviepy",
    "wandb",
    "pyaml",
    "opencv-python",
]

[project.optional-dependencies]
rllib = ["ray[rllib]"]
mujoco = [
    "mujoco>=3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pre-commit>=3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["dedo"]

[tool.hatch.build.targets.sdist]
include = ["dedo", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["dedo/data", "images"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long — let formatter handle
    "B008",  # function call in default argument (common in gym/torch code)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"
